# PromPrune

./: .gitignore  LICENSE  README.md  eval_promprune.sh  pyproject.toml
llava/model/: llava_arch.py
llava/model/multimodal_encoder/: clip_encoder.py
lmms-eval/configs/: promprune_llava15_local.yaml
lmms-eval/lmms_eval/models/simple/: llava.py
