[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promprune"
version = "1.2.2.post1"
description = "Balancing Saliency and Coverage: Semantic Prominence-Aware Budgeting for Visual Token Compression in VLMs."
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.2", "torchvision==0.16.2",
    "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid==1.0.13",
    "accelerate==0.21.0", "peft==0.18.1", "bitsandbytes==0.45.5",
    "pydantic==2.12.5", "markdown2[all]==2.5.5", "numpy==1.26.4", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests==2.32.5", "httpx==0.24.0", "uvicorn==0.41.0", "fastapi==0.135.1",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "huggingface_hub==0.36.2", "pillow==10.4.0", "PyYAML==6.0.3",
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja", "wandb==0.25.0"]
eval = [
    "datasets==4.7.0",
    "evaluate==0.4.6",
    "jsonlines==4.0.0",
    "pyarrow==23.0.1",
    "pycocotools==2.0.11",
    "pycocoevalcap==1.2",
    "sacrebleu==2.6.0",
    "scipy==1.15.3",
    "sentence-transformers==5.3.0",
]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://github.com/jayaylee/PromPrune"
"Bug Tracker" = "https://github.com/jayaylee/PromPrune/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
